0.6.5 (1/??/2013):
------------------

- Added icon for ALT Linux.

- Added "safemode" option to "hideui" token, to hide option to boot into
  safe mode for OS X ("-v -x" option to boot.efi).

- Added icon for Haiku (os_haiku.icns).

- Enable transparency of icons & main-menu text when the banner icon is
  sized to cover these areas.

- Fixed bug that could cause rEFInd to crash if fed a banner image that's
  too big. Note that "too big" can be substantially smaller than the screen
  resolution!

0.6.4 (1/8/2013):
-----------------

- Revised install.sh to copy ext2fs driver, rather than ext4fs driver, for
  ext2/3 filesystems. This can help keep non-functional entries from links
  from /vmlinuz to /boot/vmlinuz out of the menu if the system uses ext4fs
  on root and ext2fs or ext3fs on /boot.

- Fixed a couple of memory management bugs that cause rEFInd to hang at
  startup on some systems.

0.6.3 (1/6/2013):
-----------------

- Added the ability to specify a volume name or number in the
  "dont_scan_dirs" and "also_scan_dirs" tokens.

- Fixed a bug that caused removable EFI media to not appear in scan lists
  if rEFInd was installed as EFI/BOOT/boot{arch}.efi on a hard disk.

- Modified ISO-9660 driver so that it can handle discs with other than
  2048-byte sectors. This makes it useful for reading "hybrid ISO" images
  burned to USB flash disks.

- New mvrefind.sh script to move a rEFInd installation between a standard
  location (typically EFI/refind) and one of the fallback locations
  (EFI/BOOT or EFI/Microsoft/Boot). It can also do more exotic locations.

- The install.sh script now installs to EFI/BOOT/bootx64.efi or
  EFI/Microsoft/Boot/bootmgfw.efi if it's run in BIOS mode. This is
  intended to give some chance of producing a bootable installation should
  a user accidentally install Linux in EFI mode and then install rEFInd
  from that installation.

- The install.sh script now tries to find an existing rEFInd installation