@@ -9,7 +9,7 @@ VPATH = $(SRCDIR)
 
 LOCAL_CPPFLAGS  = -I$(SRCDIR) -I$(SRCDIR)/../include
 
-OBJS            = screen.o image.o text.o load_bmp.o load_icns.o
+OBJS            = screen.o image.o text.o load_bmp.o load_icns.o lodepng.o
 TARGET          = libeg.a
 
 all: $(TARGET)
